Removing an unused lib gettext

--- a/src/redis/Dockerfile
+++ b/src/redis/Dockerfile
@@ -5,7 +5,7 @@ LABEL maintainer="Claudio Netto <nettoclaudio@ufrj.br>"
 COPY files/redis-ha-entrypoint.sh /
 
 RUN apk update && \
-    apk add bash gettext && \
+    apk add bash && \
     rm /var/cache/apk/* && \
     chown -R redis:redis /redis-ha-entrypoint.sh && \
     chmod +x /redis-ha-entrypoint.sh
