Fix service name 'redis-sentinel' to 'sentinel' and start on create

--- a/templates/redis-ha/0/rancher-compose.yml
+++ b/templates/redis-ha/0/rancher-compose.yml
@@ -28,6 +28,8 @@ catalog:
 services:
   redis:
     scale: 2
+    start_on_create: true
 
-  redis-sentinel:
+  sentinel:
     scale: ${redis_sentinel_quorum}
+    start_on_create: true
