--- a/templates/redis-ha/0/docker-compose.yml
+++ b/templates/redis-ha/0/docker-compose.yml
@@ -4,14 +4,16 @@ services:
   redis:
     image: nettoclaudio/rancher-cattle-redis-ha-redis:1.0.0-rancher1
     environment:
+      DEBUG_MODE: ${debug_mode}
       REDIS_HA_MASTER_PASSWORD: ${redis_password}
       REDIS_HA_SENTINEL_MASTER_NAME: ${redis_sentinel_master_name}
 
   sentinel:
     image: nettoclaudio/rancher-cattle-redis-ha-redis-sentinel:1.0.0-rancher1
     environment:
+      DEBUG_MODE: ${debug_mode}
       REDIS_HA_SENTINEL_MASTER_NAME: ${redis_sentinel_master_name}
-      REDIS_HA_SENTINEL_QUORUM: ${redis_sentinel_quorum}
       REDIS_HA_SENTINEL_PASSWORD: ${redis_password}
+      REDIS_HA_SENTINEL_QUORUM: ${redis_sentinel_quorum}
     links:
       - redis
