Remove bash dependency

--- a/src/redis/Dockerfile
+++ b/src/redis/Dockerfile
@@ -2,13 +2,9 @@ FROM redis:4-alpine
 
 LABEL maintainer="Claudio Netto <nettoclaudio@ufrj.br>"
 
-COPY files/redis-ha-entrypoint.sh /
+COPY --chown=redis:redis files/redis-ha-entrypoint.sh /
 
-RUN apk update && \
-    apk add bash && \
-    rm /var/cache/apk/* && \
-    chown -R redis:redis /redis-ha-entrypoint.sh && \
-    chmod 540 /redis-ha-entrypoint.sh
+RUN chmod 540 /redis-ha-entrypoint.sh
 
 USER redis
 
