--- a/templates/redis-ha/0/docker-compose.yml
+++ b/templates/redis-ha/0/docker-compose.yml
@@ -7,6 +7,8 @@ services:
       DEBUG_MODE: ${debug_mode}
       REDIS_HA_MASTER_PASSWORD: ${redis_password}
       REDIS_HA_SENTINEL_MASTER_NAME: ${redis_sentinel_master_name}
+    labels:
+      io.rancher.container.pull_image: always
 
   sentinel:
     image: nettoclaudio/rancher-cattle-redis-ha-redis-sentinel:1.0.0-rancher1
@@ -15,5 +17,7 @@ services:
       REDIS_HA_SENTINEL_MASTER_NAME: ${redis_sentinel_master_name}
       REDIS_HA_SENTINEL_PASSWORD: ${redis_password}
       REDIS_HA_SENTINEL_QUORUM: ${redis_sentinel_quorum}
+    labels:
+      io.rancher.container.pull_image: always
     links:
       - redis
