--- a/src/redis/Dockerfile
+++ b/src/redis/Dockerfile
@@ -2,9 +2,10 @@ FROM redis:4-alpine
 
 LABEL maintainer="Claudio Netto <nettoclaudio@ufrj.br>"
 
-COPY --chown=redis:redis files/redis-ha-entrypoint.sh /
+COPY files/redis-ha-entrypoint.sh /
 
-RUN chmod 540 /redis-ha-entrypoint.sh
+RUN chown redis:redis /redis-ha-entrypoint.sh && \
+    chmod 540 /redis-ha-entrypoint.sh
 
 USER redis
 
