--- a/templates/redis-ha/0/docker-compose.yml
+++ b/templates/redis-ha/0/docker-compose.yml
@@ -4,7 +4,9 @@ services:
   redis:
     image: nettoclaudio/rancher-cattle-redis-ha-redis:1.0.0-rancher1
     environment:
+      {{- if eq .Values.debug_mode "true" }}
       DEBUG_MODE: ${debug_mode}
+      {{- end }}
       REDIS_HA_MASTER_PASSWORD: ${redis_password}
       REDIS_HA_SENTINEL_MASTER_NAME: ${redis_sentinel_master_name}
     labels:
@@ -18,7 +20,9 @@ services:
   sentinel:
     image: nettoclaudio/rancher-cattle-redis-ha-redis-sentinel:1.0.0-rancher1
     environment:
+      {{- if eq .Values.debug_mode "true" }}
       DEBUG_MODE: ${debug_mode}
+      {{- end }}
       REDIS_HA_SENTINEL_MASTER_NAME: ${redis_sentinel_master_name}
       REDIS_HA_SENTINEL_PASSWORD: ${redis_password}
       REDIS_HA_SENTINEL_QUORUM: ${redis_sentinel_quorum}
